# RAG-LLM-app-with-REST-API

./: .gitignore  Dockerfile  README.md  pyproject.toml  supervisord.conf
rag_llm/: app.py  chatbot.py  dataembed.py
